--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-drawer": "^2.5.1",
+    "react-native-elements": "^2.0.4",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-screens": "^2.9.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
+    "react-navigation-drawer": "^2.5.0",
     "react-navigation-tabs": "^2.9.0"
   },
   "devDependencies": {
